--- a/template.htm.in
+++ b/template.htm.in
@@ -44,7 +44,7 @@ img.emoji {
         <span class="c_content">Unknown content</span>
       </div>
       <div id="live-chat-sc-template" class="live-chat-sc">
-        <span class="time">00:00:00</span><span> </span>
+        <span class="c_time">00:00:00</span><span> </span>
         <div class="sc-block">
           <div class="header">
             <div class="name">NAME</div>
