--- a/template.htm.in
+++ b/template.htm.in
@@ -4,39 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <style>
-div #app {
-    display: inline-block;
-}
-#video1 {
-    width: 70%;
-    vertical-align: top;
-}
-div #live-chat {
-    display: inline-block;
-    overflow: scroll;
-    width: 25%;
-    height: 90%;
-    max-height: 97vh;
-    vertical-align: top;
-}
-div.live-chat-item span{
-    vertical-align: top;
-}
-div.sc-block {
-    display: inline-block;
-    margin: 5px;
-    width: 75%;
-}
-img.sticker {
-    width: 6rem;
-}
-img.emoji {
-    width: 2rem;
-}
-.c_time { color:gray; }
-.c_name { color:blue; }
-    </style>
+    {{stylecss1}}
     <title>{{title}} - Local</title>
   </head>
   <body>
@@ -73,6 +41,6 @@ img.emoji {
       </pre>
       <a href="https://github.com/ting1322/chat-player">this project</a>
     </div>
-    <script src="play-live-chat.js"></script>
+    {{javascript1}}
   </body>
 </html>
