--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,10 @@ jobs:
         go-version: 1.18
 
     - name: Build
-      run: go build -v ./...
+      run: ./buildall.sh
 
     - name: Test
-      run: go test -v ./...
+      run: go test -v
 
     - name: Upload a Build Artifact
       uses: actions/upload-artifact@v3.1.1
