fix: dispaly layout
1. 聊天室高度與主要影片對齊
2. 圖片縮小為 1.5rem (原本 2rem)
3. super sticker 圖片放右邊節省空間
4. super chat 文字與邊框 padding 5px
5. 下方時間軸文字往上貼齊影片底部
6. 當視窗調整大小時，聊天室高度也跟著調整

--- a/template.htm.in
+++ b/template.htm.in
@@ -9,10 +9,12 @@
   </head>
   <body>
     <div id="app">
-      <video id='video1' controls>
-        <source src="{{video}}" type="{{video-type}}">
-      </video>
-      <div id="live-chat"></div>
+      <div id="main">
+        <video id='video1' controls>
+          <source src="{{video}}" type="{{video-type}}">
+        </video>
+        <div id="live-chat"></div>
+      </div>
       <div id="timestamp"></div>
     </div>
     <div style="display:none">
@@ -21,6 +23,7 @@
         <span class="c_name">Unknown Name</span><span>: </span>
         <span class="c_content">Unknown content</span>
       </div>
+      <!-- class: live-chat-sc or live-chat-sticker -->
       <div id="live-chat-sc-template" class="live-chat-sc">
         <span class="c_time">00:00:00</span><span> </span>
         <div class="sc-block">
