--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -22,10 +22,7 @@ jobs:
         go-version: 1.18
 
     - name: Build
-      run: ./buildall.sh
-
-    - name: Test
-      run: go test -v
+      run: ./build.sh
 
     - name: Upload a Build Artifact
       uses: "marvinpinto/action-automatic-releases@latest"
@@ -35,5 +32,5 @@ jobs:
         prerelease: false
         title: "Development Build"
         files: |
-          chatplayer
-          chatplayer.exe
+          chatplayer-linux-x86-64.zip
+          chatplayer-windows-x86-64.zip
