fix typo in htm template
miss match div tag

--- a/pkg/cplayer/template.htm.in
+++ b/pkg/cplayer/template.htm.in
@@ -13,7 +13,7 @@
         <video id='video1' controls>
           <source src="{{video}}" type="{{video-type}}">
         </video>
-        <div id="live-chat">/div>
+        <div id="live-chat"></div>
       </div>
       <div id="timestamp"></div>
       <div id="option">
